@@ -179,6 +179,9 @@
                 <th width="80" align="center" data-i18n="NodeID">NodeID</th>
                 <th width="150" align="left" data-i18n="Name">Name</th>
                 <th align="left" data-i18n="Description">Description</th>
+                <th width="120" align="center" data-i18n="Manufacturer">Manufacturer</th>
+                <th width="80" align="center" data-i18n="ID">ID</th>
+                <th width="80" align="center" data-i18n="Type">Type</th>
                 <th width="150" align="left" data-i18n="Last Seen">Last Seen</th>
                 <th width="50" align="left" data-i18n="EnablePolling">Enable Polling</th>
                 <th width="50" align="left" data-i18n="Status">Status</th>
